# policy-manual-rag

./: .gitignore  PORTFOLIO.md  README.md  SETUP.md  SPEC.md  WEBSITE_BLURB.md  pyproject.toml
.streamlit/: config.toml
app/: _ui.py  app.py
data/: chunk.py  eval_questions.json  ingest.py
data/manual_sections/: BAM_130.json  BEM_212.json  BEM_213.json  BEM_400.json  BEM_500.json  BEM_501.json  BEM_502.json  BEM_503.json  BEM_550.json  BEM_554.json  BEM_556.json
eval/: ablations.py  llm_report.md  report.md  retrieval_eval.py  run_llm_eval.py
src/: __init__.py  answer.py  config.py  judge.py  rerank.py  retrieve.py  schema.py
tests/: test_answer.py  test_ingest_chunk.py  test_retrieval.py
