[project]
name = "policy-manual-rag"
version = "0.1.0"
description = "Measured, citation-grounded RAG over the Michigan SNAP eligibility manual."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "llama-index-core>=0.12,<0.16",
    "llama-index-embeddings-huggingface>=0.4",
    "llama-index-retrievers-bm25>=0.5",
    "sentence-transformers>=3.0",
    "pypdf>=5.0",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
]

[project.optional-dependencies]
llm = [
    "llama-index-llms-anthropic>=0.6",
    "anthropic>=0.40",
    "ragas>=0.2",
]
app = [
    "streamlit>=1.40",
]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "data", "eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
