[project]
name = "policy-manual-rag"
version = "0.1.0"
description = "Measured, citation-grounded RAG over the Michigan SNAP eligibility manual."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "llama-index-core>=0.12,<0.16",
    "llama-index-embeddings-huggingface>=0.4",
    "llama-index-retrievers-bm25>=0.5",
    "sentence-transformers>=3.0",
    "pypdf>=5.0",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
]

[project.optional-dependencies]
llm = [
    "llama-index-llms-anthropic>=0.6",
    "anthropic>=0.40",
]
# Note on Ragas: the spec names Ragas for evaluation. At build time Ragas (0.2 and
# 0.4) was incompatible with the installed langchain 1.x line (it imports modules
# removed in langchain 1.0), and pinning langchain down cascaded into conflicts
# with langgraph/langchain-openai. Rather than ship a broken dependency, the
# LLM-judged metrics (faithfulness, answer relevancy, context precision) are
# computed directly against Claude in src/judge.py, using the same metric
# definitions Ragas uses. See README "Evaluation" for the rationale.
app = [
    "streamlit>=1.40",
]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "data", "eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
